# pamsignal

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  meson.build  meson.options  pamsignal.8.in  pamsignal.conf.example  pamsignal.service  pamsignal.service.in  pamsignal.spec  test_e2e.sh  test_install_docker.sh
.claude/: settings.local.json
.claude/skills/distro-packaging/: SKILL.md
.claude/skills/owasp-review/: SKILL.md
.claude/skills/senior-linux-developer/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bootstrap-signing-key.yml  ci.yml  ppa-upload.yml  release-packages.yml
archieve/test/: communication_util_test.c  config_util_test.c  host_util_test.c  log_parser_util_test.c
archieve/utils/: communication_util.c  communication_util.h  config_util.c  config_util.h  host_util.c  host_util.h  log_parser_util.c  log_parser_util.h
debian/: changelog  control  copyright  pamsignal.postinst  pamsignal.postrm  rules  watch
dists/stable/: InRelease  Release  Release.gpg
docs/: alerts.md  architecture.md  configuration.md  debian.md  deployment.md  development.md  distros.md  phase-1-initialize.md  phase-1-meson_guide.md  phase-1-systemd-jounald.md  phase1-systemd-jounal.md  ppa.md  signing-key.asc  threat-model.md
examples/fail2ban/: README.md
examples/fail2ban/filter.d/: pamsignal.conf
examples/fail2ban/jail.d/: pamsignal.conf
examples/nodejs-webhook/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/nodejs-webhook/bruno-collection/: Brute Force Detected.bru  Login Failure.bru  Login Success.bru  bruno.json
examples/nodejs-webhook/src/: app.ts  server.ts
examples/nodejs-webhook/tests/: webhook.test.ts
include/: config.h  init.h  journal_watch.h  notify.h  pam_event.h  paths.h.in  utils.h
rpm/el9/: pamsignal-0.2.1-1.el9.src.rpm  pamsignal-0.2.1-1.el9.x86_64.rpm  pamsignal-0.2.2-1.el9.src.rpm  pamsignal-0.2.2-1.el9.x86_64.rpm  pamsignal-0.2.3-1.el9.src.rpm  pamsignal-0.2.3-1.el9.x86_64.rpm  pamsignal-0.2.4-1.el9.src.rpm  pamsignal-0.2.4-1.el9.x86_64.rpm  pamsignal-0.3.0-1.el9.src.rpm  pamsignal-0.3.0-1.el9.x86_64.rpm  pamsignal-0.3.1-1.el9.src.rpm  pamsignal-0.3.1-1.el9.x86_64.rpm  pamsignal-0.3.2-1.el9.src.rpm  pamsignal-0.3.2-1.el9.x86_64.rpm  pamsignal-0.3.3-1.el9.src.rpm  pamsignal-0.3.3-1.el9.x86_64.rpm  pamsignal-0.3.4-1.el9.src.rpm  pamsignal-0.3.4-1.el9.x86_64.rpm  pamsignal-debuginfo-0.2.1-1.el9.x86_64.rpm  pamsignal-debuginfo-0.2.2-1.el9.x86_64.rpm  pamsignal-debuginfo-0.2.3-1.el9.x86_64.rpm  pamsignal-debuginfo-0.2.4-1.el9.x86_64.rpm  pamsignal-debuginfo-0.3.0-1.el9.x86_64.rpm  pamsignal-debuginfo-0.3.1-1.el9.x86_64.rpm  pamsignal-debuginfo-0.3.2-1.el9.x86_64.rpm  pamsignal-debuginfo-0.3.3-1.el9.x86_64.rpm  pamsignal-debuginfo-0.3.4-1.el9.x86_64.rpm  pamsignal-debugsource-0.2.1-1.el9.x86_64.rpm  pamsignal-debugsource-0.2.2-1.el9.x86_64.rpm  pamsignal-debugsource-0.2.3-1.el9.x86_64.rpm  pamsignal-debugsource-0.2.4-1.el9.x86_64.rpm  pamsignal-debugsource-0.3.0-1.el9.x86_64.rpm  pamsignal-debugsource-0.3.1-1.el9.x86_64.rpm  pamsignal-debugsource-0.3.2-1.el9.x86_64.rpm  pamsignal-debugsource-0.3.3-1.el9.x86_64.rpm  pamsignal-debugsource-0.3.4-1.el9.x86_64.rpm  pamsignal.repo
rpm/el9/repodata/: 0ed22e32986fc1dbe7b66205c28c52a0cc948a4207fa8eaf8684ee6965c37d9c-primary.sqlite.bz2  159873d10b3415497eeebd56857e6bf367bc9f132253c9fa3854b822466b8dc0-filelists.sqlite.bz2  1857239dfb992f02d00b5db8da1b78cb4afa5d161c54ee5c5c2bb23f98bae7f8-other.sqlite.bz2  1bba15ea844bf04f2d19c9d9720c465ffa03c8129970717be83d57574ea86970-filelists.sqlite.bz2  222343c5fa7d9ba28761090a8d0db94e083af01e28dadda0d92f02479d623dcb-other.sqlite.bz2  3179f29e6b876e6f3228868ebd58371b8ae2a284aeb0e0c57f884a6c190fcaee-primary.sqlite.bz2  4e3ed6101ca308cc55178a12d6bbbfb7c998b8cef8cd641429377ecdcd98f7f0-primary.sqlite.bz2  4f31fc67dc6755a120cb309d9aadee6107867cf9afb32d0786505a378d04c28f-primary.sqlite.bz2  50a1da31c94bccc979dc2ee2775c0622fb52c38406b93336f7b713af2d803a6c-filelists.sqlite.bz2  51f011310ba7f321078cd81cf456593fb29ca881c68a317ffa64f5f49dcd0a76-other.sqlite.bz2  649fc1223b1de8b9b28828598a1c8bdcbeff26e13fc8958a2a987532d11d4835-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc  (+16 more)
rpm/fedora/: pamsignal-0.2.1-1.fc44.src.rpm  pamsignal-0.2.1-1.fc44.x86_64.rpm  pamsignal-0.2.2-1.fc44.src.rpm  pamsignal-0.2.2-1.fc44.x86_64.rpm  pamsignal-0.2.3-1.fc44.src.rpm  pamsignal-0.2.3-1.fc44.x86_64.rpm  pamsignal-0.2.4-1.fc44.src.rpm  pamsignal-0.2.4-1.fc44.x86_64.rpm  pamsignal-0.3.0-1.fc44.src.rpm  pamsignal-0.3.0-1.fc44.x86_64.rpm  pamsignal-0.3.1-1.fc44.src.rpm  pamsignal-0.3.1-1.fc44.x86_64.rpm  pamsignal-0.3.2-1.fc44.src.rpm  pamsignal-0.3.2-1.fc44.x86_64.rpm  pamsignal-0.3.3-1.fc44.src.rpm  pamsignal-0.3.3-1.fc44.x86_64.rpm  pamsignal-0.3.4-1.fc44.src.rpm  pamsignal-0.3.4-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.2.1-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.2.2-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.2.3-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.2.4-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.3.0-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.3.1-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.3.2-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.3.3-1.fc44.x86_64.rpm  pamsignal-debuginfo-0.3.4-1.fc44.x86_64.rpm  pamsignal-debugsource-0.2.1-1.fc44.x86_64.rpm  pamsignal-debugsource-0.2.2-1.fc44.x86_64.rpm  pamsignal-debugsource-0.2.3-1.fc44.x86_64.rpm  pamsignal-debugsource-0.2.4-1.fc44.x86_64.rpm  pamsignal-debugsource-0.3.0-1.fc44.x86_64.rpm  pamsignal-debugsource-0.3.1-1.fc44.x86_64.rpm  pamsignal-debugsource-0.3.2-1.fc44.x86_64.rpm  pamsignal-debugsource-0.3.3-1.fc44.x86_64.rpm  pamsignal-debugsource-0.3.4-1.fc44.x86_64.rpm  pamsignal.repo
scripts/: build-debian-source.sh  build-ppa-source.sh
src/: config.c  init.c  journal_watch.c  main.c  notify.c  utils.c
tests/: fuzz_parse_message.c  scenario.sh  test_config.c  test_journal_watch.c  test_notify.c  test_utils.c
(+61 files in other folders)
